syntax = "proto3";

package role.v1;

import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/eliofery/golang-grpc/pkg/api/role/v1";

message GetByIDResponse {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      title: "GetByIDResponse"
      description: "Response to get role data by ID"
    }
    external_docs: {
      url: "http://localhost:8086/?urls.primaryName=Role%20v1"
      description: "Response to get role data by ID"
    }
    example: '{"id":"5","name":"Guest"}'
  };

  // Role ID
  int64 id = 1 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: 'ID int64 `json:"id"`'
    }
  ];

  // Role name
  string name = 2 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: 'Name string `json:"name"`'
    }
  ];
}
