syntax = "proto3";

package user.v1;

import "buf/validate/validate.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/eliofery/golang-grpc/pkg/api/user/v1";

message GetByIDRequest {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      title: "GetByIDRequest"
      description: "Request to get user data by ID"
    }
    external_docs: {
      url: "http://localhost:8086/?urls.primaryName=User%20v1"
      description: "Request to get user data by ID"
    }
    example: '{"id":"123"}'
  };

  // User ID
  int64 id = 1 [
    (buf.validate.field).int64.gte = 0,
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: 'ID int64 `json:"id"`'
    }
  ];
}
